# aa-fitcheck

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  README.md  RELEASE_NOTES_v1.0.md  SECURITY.md  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  cosmetic.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/images/: .gitkeep
fitcheck/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  checks.py  constants.py  forms.py  managers.py  signals.py  tasks.py  urls.py
fitcheck/migrations/: 0001_initial.py  0002_standalone_fittings_tags_policies.py  0003_alter_compliancefinding_code.py  0004_alter_compliancefinding_code.py  0005_alter_compliancefinding_code.py  0006_alter_compliancefinding_code.py  0007_fitsubmission_frigate_escape_bay_type_id.py  0008_add_member_inventory_perms.py  0009_source_plugin_pk.py  0010_fit_assignments.py  0011_backfill_assignments.py  0012_fitsubmission_doctrine_and_more.py  0013_backfill_meta_groups.py  0014_alter_assignmentitempolicy_section_and_more.py  0015_alter_assignmentitempolicy_allowed_meta_groups_and_more.py  0016_assignmentitempolicy_attribute_bounds_and_more.py  0017_tag_color_fit_archive.py  0018_doctrinecategory_visibility.py  0019_alter_assignmentitempolicy_section_and_more.py  0020_enforcementsettings.py  0021_doctrinefit_feb_frigate_type_id_and_more.py  0022_compliancepolicy_is_builtin.py  0023_compliancepolicy_disabled_at.py  0024_substitution_policy_labels.py  0025_doctrinefit_feb_frigate_type_ids.py  0026_fitcompliancefilter.py  0027_doctrinecategory_source_plugin_pk.py  0028_structurenamecache.py  0029_remove_min_meta_level.py  0030_compliancesnapshot_and_more.py  0031_doctrinefit_source_policy_bumped_at_and_more.py  0032_scanparameters.py  0033_quantity_zero_and_charge_rule.py  0034_retire_default_policy.py  0035_standard_preset_cargo_25.py  0036_doctrine_compliance_policy.py  0037_filter_enforce_from.py  0038_fitsubmission_hidden_at.py  (+3 more)
testauth/: settings.py  wsgi.py
(+132 files in other folders)
